<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".safetyTips">
    <ImageView
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:contentDescription="@string/back"
        android:id="@+id/Back"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_view"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_tips"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/tips" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stay_aware_of_your_surroundings"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trust_your_instincts"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avoid_isolated_areas"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stay_connected"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/trustworthy_transportation"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carry_personal_safety_devices"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stay_calm_in_emergencies"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_contact"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/webTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_links"
        android:textSize="24sp"
        android:textColor="@color/blue"
        android:textStyle="italic"/>



</LinearLayout>