<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/p"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/blue"
        android:layout_centerVertical="true">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/update_profile"
        android:textSize="32sp"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/new_email"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:hint="@string/enter_email"
        android:layout_marginStart="11dp"
        android:inputType="textEmailAddress"
        android:background="@color/white"
        android:autofillHints="no" />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <EditText
            android:id="@+id/new_pass"
            android:layout_width="390dp"
            android:layout_height="50dp"
            android:hint="@string/enter_password"
            android:layout_marginStart="11dp"
            android:inputType="textPassword"
            android:background="@color/white"
            android:autofillHints="no" />
        <Button
            android:id="@+id/updt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:text="@string/update"
            android:textColor="@color/black"/>


</LinearLayout>