<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/p"
    tools:context=".updateProfile"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:id="@+id/pro"
        android:layout_width="426dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:background="@color/blue"
        android:orientation="vertical"
        android:padding="8dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_profile"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/names"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:autofillHints="no"
            android:padding="3dp"
            android:background="@color/white"
            android:hint="@string/name"
            android:inputType="text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/new_email"
            android:layout_width="390dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:autofillHints="no"
            android:padding="3dp"
            android:background="@color/white"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/new_pass"
            android:layout_width="390dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:autofillHints="no"
            android:padding="3dp"
            android:background="@color/white"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/update_pro"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:text="@string/update"
            android:textColor="@color/black" />
    </LinearLayout>


</RelativeLayout>