<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="250dp"
    android:background="@color/blue"
    android:paddingLeft="21dp"
    android:paddingRight="21dp"
    android:paddingBottom="11dp"
    android:orientation="vertical"
    android:layout_gravity="center">




        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_contacts"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/getName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
           android:background="@color/white"
            android:padding="11dp"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/enter_name"
            android:layout_marginBottom="11dp"
            android:importantForAutofill="no" />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
        <EditText
            android:id="@+id/getNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:padding="11dp"
            android:textColor="@color/black"
            android:inputType="phone"
            android:hint="@string/enter_number"
            android:layout_marginBottom="11dp"
            android:autofillHints="no" />



        <Button
            android:id="@+id/btnAction"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/add"
            android:backgroundTint="@color/white"
            android:layout_marginTop="11dp"
            android:textColor="@color/black"
            android:layout_gravity="end"/>


    </LinearLayout>