<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/u"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/bg_view" />

    <GridLayout
               android:layout_below="@id/view"
               android:id="@+id/grid"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:rowCount="4"
               android:columnCount="2"
               android:layout_marginTop="-80dp"
               android:layout_marginLeft="24dp"
               android:layout_marginRight="24dp">
               <androidx.cardview.widget.CardView
                   android:id="@+id/w_location"
                   android:layout_width="100dp"
                   android:layout_height="150dp"
                   app:cardCornerRadius="15dp"
                   android:layout_margin="12dp"
                   android:layout_columnWeight="1"
                   android:layout_rowWeight="1"
                   android:layout_row="1"
                   android:layout_column="0">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/location"
                           android:textSize="24sp"
                           android:textStyle="bold"
                           android:layout_gravity="center"
                           android:textColor="@color/black"
                           app:drawableTopCompat="@drawable/location_icon" />

               </androidx.cardview.widget.CardView>
               <androidx.cardview.widget.CardView
                   android:id="@+id/contacts"

                   android:layout_width="100dp"
                   android:layout_height="150dp"
                   app:cardCornerRadius="15dp"
                   android:layout_margin="12dp"
                   android:layout_columnWeight="1"
                   android:layout_rowWeight="1"
                   android:layout_row="1"
                   android:layout_column="1">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/contacts"
                           android:textSize="24sp"
                           android:textStyle="bold"
                           android:layout_gravity="center"
                           android:textColor="@color/black"
                           app:drawableTopCompat="@drawable/contact_ic" />

               </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/current_location"
            android:layout_width="100dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            android:layout_margin="12dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="2"
            android:layout_column="0">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/image2"
                android:contentDescription="@string/image_view"/>



        </androidx.cardview.widget.CardView>



               <androidx.cardview.widget.CardView
                   android:id="@+id/safetyTips"
                   android:layout_width="100dp"
                   android:layout_height="150dp"
                   app:cardCornerRadius="15dp"
                   android:layout_margin="12dp"
                   android:layout_columnWeight="2"
                   android:layout_rowWeight="1"
                   android:layout_row="2"
                   android:layout_column="1">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/safety_tips"
                           android:textSize="24sp"
                           android:textStyle="bold"
                           android:layout_gravity="center"
                           android:textColor="@color/black"
                           app:drawableTopCompat="@drawable/tips" />

               </androidx.cardview.widget.CardView>
               <androidx.cardview.widget.CardView
                   android:id="@+id/police_add"
                   android:layout_width="100dp"
                   android:layout_height="150dp"
                   app:cardCornerRadius="15dp"
                   android:layout_margin="12dp"
                   android:layout_columnWeight="1"
                   android:layout_rowWeight="1"
                   android:layout_row="3"
                   android:layout_column="0">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/Police"
                           android:textSize="24sp"
                           android:textStyle="bold"
                           android:layout_gravity="center"
                           android:textColor="@color/black"
                           app:drawableTopCompat="@drawable/police" />

               </androidx.cardview.widget.CardView>
               <androidx.cardview.widget.CardView
                   android:id="@+id/logout"
                   android:layout_width="100dp"
                   android:layout_height="150dp"
                   app:cardCornerRadius="15dp"
                   android:layout_margin="12dp"
                   android:layout_columnWeight="1"
                   android:layout_rowWeight="1"
                   android:layout_row="3"
                   android:layout_column="1">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/logout"
                           android:textSize="24sp"
                           android:textStyle="bold"
                           android:layout_gravity="center"
                           android:textColor="@color/black"
                           app:drawableTopCompat="@drawable/logout" />

               </androidx.cardview.widget.CardView>

           </GridLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/grid"
        android:gravity="center">





    <ImageButton
        android:id="@+id/emergency"
        android:layout_width="170dp"
        android:layout_height="50dp"

        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:drawableTint="@color/red"
        android:src="@drawable/emer_ic"
        android:contentDescription="@string/Emergency" />
    </LinearLayout>


    <TextView

        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/women"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/user"
        android:layout_below="@id/textView4"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:autofillHints="userEmail"
        android:contentDescription="@string/email"
        android:ems="10"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/user" />
    <TextView
        android:id="@+id/update_pro"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:src="@drawable/edit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/update"
        android:textColor="@color/white"
        android:layout_toEndOf="@id/user"
        android:layout_below="@id/textView4"
        android:contentDescription="@string/todo"/>





</RelativeLayout>

