<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/u"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Parents">

    <!-- Background View -->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_view" />

    <!-- Page Name TextView -->
    <TextView
        android:id="@+id/pageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pageName"
        android:textSize="38sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <!-- User Name TextView -->
    <TextView
        android:id="@+id/user_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pageName"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        app:drawableStartCompat="@drawable/user" />

    <!-- Edit Icon for Updating -->
    <TextView
        android:id="@+id/update_parents"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/user_name"
        android:layout_alignBottom="@id/user_name"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/update" />

    <!-- Alert CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/alert"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="15dp"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Notifications"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/notification" />

    </androidx.cardview.widget.CardView>

    <!-- Logout CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/logout"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_below="@id/alert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/logout" />


    </androidx.cardview.widget.CardView>
</RelativeLayout>
